# routes/index.js
@@ -1,11 +1,10 @@
 const routes = require('express').Router();
 const contact = require('./contact');
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
-
-routes.use('/api-docs', swaggerUi.serve);
-routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
-
+routes.use('/', require('./swagger'));
 routes.use('/contacts', contact);
+routes.get('/', (req, res) => {
+  let docData = 'Hello World';
+  res.send(docData);
+});
 
 module.exports = routes;
